--- a/package.json
+++ b/package.json
@@ -12,23 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
+    "@pnp/common": "^1.0.1",
+    "@pnp/logging": "^1.0.1",
+    "@pnp/odata": "^1.0.1",
+    "@pnp/sp": "^1.0.1",
+    "angular-4-data-table": "^0.4.3",
+    "angular-in-memory-web-api": "~0.5.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "es6-promise": "^4.2.4",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "whatwg-fetch": "^2.0.3",
+    "zone.js": "^0.8.14",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
     "@angular/cli": "1.4.10",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/language-service": "^4.4.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
